--- a/Home.html
+++ b/Home.html
@@ -53,31 +53,83 @@
                             <div class="category categories__item">
                                 <div class="category__title categories__title">
                                     <p>categoria</p>
+                                    <img class="categories__icon categories__icon__top"
+                                        src="./image/util/chevron-down.svg" alt="">
+                                </div>
+                                <div class="category__subcategories categories__list">
+                                    <div class="subcategory categories__item">
+                                        <div class="subcategory__title categories__title">
+                                            <img src="./image/util/corner-down-right.svg">
+                                            <p>subcategoria</p>
+                                            <img class="categories__icon categories__icon__top"
+                                                src="./image/util/chevron-down-light.svg" alt="">
+                                        </div>
+                                        <div class="subcategory__subsubcategories categories__list">
+                                            <div class="subsubcategory categories__item">
+                                                <div class="subsubcategory__title categories__title">
+                                                    <img src="./image/util/corner-down-right.svg">
+                                                    <p>3o nível de categoria</p>
+                                                    <img class="categories__icon categories__icon__last"
+                                                        src="./image/util/chevron-down-light.svg" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="subsubcategory categories__item">
+                                                <div class="subsubcategory__title categories__title">
+                                                    <img src="./image/util/corner-down-right.svg">
+                                                    <p>3o nível de categoria</p>
+                                                    <img class="categories__icon categories__icon__last"
+                                                        src="./image/util/chevron-down-light.svg" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="subsubcategory categories__item">
+                                                <div class="subsubcategory__title categories__title">
+                                                    <img src="./image/util/corner-down-right.svg">
+                                                    <p>3o nível de categoria</p>
+                                                    <img class="categories__icon categories__icon__last"
+                                                        src="./image/util/chevron-down-light.svg" alt="">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="category categories__item">
                                 <div class="category__title categories__title">
                                     <p>categoria</p>
+                                    <img class="categories__icon categories__icon__top"
+                                        src="./image/util/chevron-down.svg" alt="">
                                 </div>
                                 <div class="category__subcategories categories__list">
                                     <div class="subcategory categories__item">
                                         <div class="subcategory__title categories__title">
+                                            <img src="./image/util/corner-down-right.svg">
                                             <p>subcategoria</p>
+                                            <img class="categories__icon categories__icon__top"
+                                                src="./image/util/chevron-down-light.svg" alt="">
                                         </div>
                                         <div class="subcategory__subsubcategories categories__list">
                                             <div class="subsubcategory categories__item">
                                                 <div class="subsubcategory__title categories__title">
-                                                    <p>subsubcategoria</p>
+                                                    <img src="./image/util/corner-down-right.svg">
+                                                    <p>3o nível de categoria</p>
+                                                    <img class="categories__icon categories__icon__last"
+                                                        src="./image/util/chevron-down-light.svg" alt="">
                                                 </div>
                                             </div>
                                             <div class="subsubcategory categories__item">
                                                 <div class="subsubcategory__title categories__title">
-                                                    <p>subsubcategoria</p>
+                                                    <img src="./image/util/corner-down-right.svg">
+                                                    <p>3o nível de categoria</p>
+                                                    <img class="categories__icon categories__icon__last"
+                                                        src="./image/util/chevron-down-light.svg" alt="">
                                                 </div>
                                             </div>
                                             <div class="subsubcategory categories__item">
                                                 <div class="subsubcategory__title categories__title">
-                                                    <p>subsubcategoria</p>
+                                                    <img src="./image/util/corner-down-right.svg">
+                                                    <p>3o nível de categoria</p>
+                                                    <img class="categories__icon categories__icon__last"
+                                                        src="./image/util/chevron-down-light.svg" alt="">
                                                 </div>
                                             </div>
                                         </div>
