add: desktop menu

--- a/Home.html
+++ b/Home.html
@@ -153,11 +153,176 @@
                 <!-- FIM DO MENU  -->
 
                 <div class="menu_container">
-                    <li>categoria <img src="./image/util/arrow_down.svg"></img></li>
-                    <li>categoria <img src="./image/util/arrow_down.svg"></img></li>
-                    <li>categoria <img src="./image/util/arrow_down.svg"></img></li>
-                    <li>categoria <img src="./image/util/arrow_down.svg"></img></li>
-                    <li>categoria <img src="./image/util/arrow_down.svg"></img></li>
+                    <li class="category__desk">
+                        <p>categoria</p>
+                        <img src="./image/util/arrow_down.svg"></img>
+                        <div class="category__desk__sub__list">
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="category__desk">
+                        <p>categoria</p>
+                        <img src="./image/util/arrow_down.svg"></img>
+                        <div class="category__desk__sub__list">
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="category__desk">
+                        <p>categoria</p>
+                        <img src="./image/util/arrow_down.svg"></img>
+                        <div class="category__desk__sub__list">
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="category__desk">
+                        <p>categoria</p>
+                        <img src="./image/util/arrow_down.svg"></img>
+                        <div class="category__desk__sub__list">
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="category__desk">
+                        <p>categoria</p>
+                        <img src="./image/util/arrow_down.svg"></img>
+                        <div class="category__desk__sub__list">
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                            <div class="category__desk__sub__container">
+                                <h2 class="category__desk__sub__title">subcategoria</h2>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                                <h3 class="category__desk__sub__item">3o nível de categoria</h3>
+                            </div>
+                        </div>
+                    </li>
                 </div>
 
             </div>
